# py-bindings-samples

./: .dockerignore  .gitignore  Dockerfile.sandbox  Makefile  README.md  compose.yaml  pyproject.toml
src/geometry/: CMakeLists.txt  Makefile  geometry.cpp  geometry.h  geometry_wrap.cpp  geometry_wrap.h
src/pygeometry/: __init__.py
tests/: test_ctypes_basic.py  test_ctypes_printf.py  test_ctypes_pygeometry.py  test_ctypes_pygeometry_cm.py  test_ctypes_pygeometry_oo.py  test_ctypes_qsort.py
