[project]
name = "py-bindings-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "--strict-markers"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
pythonpath = [
    "src",
]
